# python-project-generator-cli

./: .gitignore  README.md  pyproject.toml
.specstory/: .project.json
.specstory/history/: 2025-12-11_03-05Z-fix-none-type-assignment-error.md  2025-12-11_06-25Z-refactor-project-structure-and-add-templates.md  2025-12-11_07-28Z-resolve-git-pull-issue.md  2025-12-11_07-37Z-add-tests-to-project.md  2025-12-11_09-39Z-handle-ctrl-c-with-project-generator.md  2025-12-11_09-43Z-add-simple-python-boilerplate-with-tdd.md  2025-12-11_09-55Z-make-cli-globally-available.md  2025-12-11_09-57Z-make-cli-globally-available.md
docs/: hatchling-build-fix.md  test_suite.md
src/: __init__.py  cli.py  constants.py  main.py  ui.py
src/templates/: __init__.py  automation.py  base.py  data_science.py  fastapi.py  rag_agent.py  simple_boilerplate.py
tests/: __init__.py  conftest.py  test_cli.py  test_template_registry.py  test_templates.py  test_ui.py
tests/integration/: __init__.py  test_template_generation.py
